--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-          background-image: url(./Apashe\ Fondo.jpeg);
+          background-image: url(./fondo.jpeg);
           background-repeat: no-repeat;
           background-attachment: fixed;  
           background-size: cover;
@@ -16,11 +16,63 @@
 <body style="color:Ghostwhite;">
     
     <h1 style="font-size:300%;"><b>APASHE</b></h1>
-    <p><b>John De Buck</b> (nacido el 9 de mayo de 1992), conocido profesionalmente como Apashe (pronunciado <i> 'A-pa-she'</i>), es un músico canadiense nacido en Bélgica. Nació en Bruselas, Bélgica y actualmente vive en Montreal, Canadá </p>
-    <h2 style="font-size:160%;"><b>Vida y carrera</b></h2>
-    <p>Apashe nació en Bruselas . A los 19 años se mudó a Canadá. Allí comenzó a estudiar electroacústica en la Universidad de Concordia y luego permaneció en Montreal. Después de sus estudios, trabajó como diseñador de sonido en Apollo Studio , donde coprodujo el diseño de sonido para videojuegos (p. ej. Assassin's Creed , Watch Dogs , Far Cry ) y el sonido para los avances de juegos de Ubisoft . En 2014 dejó la compañía cuando su propia música comenzó a despegar. En 2011 firmó con Kannibalen Records . En 2020 lanzó su segundo álbum Renaissance, una mezcla de música electrónica y clásica.. [3] Para este proyecto se contrató a la Orquesta Sinfónica de Praga con 69 instrumentos. Requiem, que ganó el EP electrónico del año de GAMIQ, y Renaissance fueron producidos en su primer estudio propio. [6] Su música se ha utilizado en varios avances de películas y series, por ejemplo, John Wick , Iron Fist , Kingsman: The Golden Circle , Fast & Furious y Love, Death & Robots Volumen 3.
+    <p style="text-align:justify;"><b>John De Buck</b> (nacido el 9 de mayo de 1992), conocido profesionalmente como Apashe (pronunciado <i> 'A-pa-she'</i>), es un músico canadiense nacido en Bélgica. Nació en Bruselas, Bélgica y actualmente vive en Montreal, Canadá </p>
+    <h2  style="font-size:160%;"><b>Vida y carrera</b></h2>
+    <p style="text-align:justify;">Apashe nació en Bruselas . A los 19 años se mudó a Canadá. Allí comenzó a estudiar electroacústica en la Universidad de Concordia y luego permaneció en Montreal. Después de sus estudios, trabajó como diseñador de sonido en Apollo Studio , donde coprodujo el diseño de sonido para videojuegos (p. ej. Assassin's Creed , Watch Dogs , Far Cry ) y el sonido para los avances de juegos de Ubisoft . En 2014 dejó la compañía cuando su propia música comenzó a despegar. En 2011 firmó con Kannibalen Records . En 2020 lanzó su segundo álbum Renaissance, una mezcla de música electrónica y clásica. Para este proyecto se contrató a la Orquesta Sinfónica de Praga con 69 instrumentos. Requiem, que ganó el EP electrónico del año de GAMIQ, y Renaissance fueron producidos en su primer estudio propio. Su música se ha utilizado en varios avances de películas y series, por ejemplo, John Wick , Iron Fist , Kingsman: The Golden Circle , Fast & Furious y Love, Death & Robots Volumen 3.
 
         Apashe describe su música como "majestuosa" (una mezcla de música clásica y electrónica). Cuando Apashe compone, se inspira en escenas de películas que crea en su cabeza, sin dejar de intentar hacer que su música sea bailable. Ha colaborado con Tech N9ne, Alina Pash, Dabin, Sway, Black Prez, Wasiu, Lubalin, wifisfuneral, RIOT, Vladimir Cauchemar y más.</p>
-
+        <h2  style="font-size:160%;"><b>Discografía</b></h2>
+        <ul>
+          <li>Contaminación (2012)</li>
+          <li>EP Mitología negra (2013)</li>
+          <li>Imperio Dorado (2014)</li>
+          <li>Adiós (2014)</li>
+          <li>Sin twerk (2014)</li>
+          <li>Batalla real (2014)</li>
+          <li>Confesar (2015)</li>
+          <li>Soy un dragón (2015)</li>
+          <li>Réquiem trampa (2015)</li>
+          <li>Sin Twerk VIP (2015)</li>
+          <li>Chicas tanque (2015)</li>
+          <li>Danza del esqueleto (2016)</li>
+          <li>Fuego adentro (2016)</li>
+          <li>Chico helicóptero (2016)</li>
+          <li>Supernova (2017)</li>
+          <li>Hazlo (2018)</li>
+          <li>Sentirse bien (2018)</li>
+          <li>Réquiem (2018)</li>
+          <li>Réquiem Remix EP (2018)</li>
+          <li>El bueno, el malo y el falso (2019)</li>
+          <li>Aniquilación (2019)</li>
+          <li>Малый повзрослел (Apashe Remix) (2020)</li>
+          <li>Renacimiento (Remezclas) (2021)</li>
+          <li>Maté a la orquesta EP (2021)</li>
+          <li>DEP (2022)</li>
+          <li>Maté a la orquesta Remix EP (2022)</li>
+          <li>Gasolina con Raga (2023)</li>
+          <li>Fractura con Flux Pavilion y Joey Valence & Brae (2023)</li>
+          <li>La venganza de la orquesta con Magugu (2023)</li>
+          <li>Devil May Cry con Sofiane Pamart (2023)</li>
+        </ul>  
+        <h2  style="font-size:160%;"><b>Links a Álbumes y Singles</b></h2>
+        <p>
+        <a href="https://music.youtube.com/playlist?list=OLAK5uy_m37tY0tQv0PLWSau13N_RM_8rvtC6nABE">
+          <img width="128" height="128" src="./cover1.jpg" alt="Renaissance" >
+          </a>
+          <a href="https://music.youtube.com/playlist?list=OLAK5uy_llHLicUN6fa4JOk1N362CzNZnuf4m4OG8">
+            <img width="128" height="128" src="./cover2.jpg" alt="I Killed the Orchestra" >
+            </a>
+            <a href="https://music.youtube.com/playlist?list=OLAK5uy_nKRw6JBuew3nsONz1qtkX4Z-pC2TN5pyc">
+              <img width="128" height="128" src="./cover3.jpg" alt="Devil May Cry" >
+              </a>
+        </p>
+          <p style="text-align:center;">
+            <a href="https://www.youtube.com/@ApasheOfficial/playlists">
+            <img width="32" height="32" src="./logoyt.png" alt="Youtube link" >
+            </a>
+            <a href="https://www.instagram.com/apashe/?hl=es">
+              <img width="32" height="32" src="./logoig.png" alt="Instagram link" >
+              </a>
+          </p>
 </body>
 </html>
